# checkboxer

./: JOURNEY.md  JOURNEY2.md  MANIFEST.in  README.md  benchmark.py  profile_run.py  pyproject.toml
boxdetect/: pipelines.py
npboxdetect/: __init__.py  _numba_ops.py  detector.py
